# Kanbus

./: .coveragerc  .env.example  .gitignore  .kanbus.yml  .release-please-config.json  .release-please-manifest.json  AGENTS.md  AGENTS.override.md  CLI_REFERENCE.md  CONFIGURATION.md  CONTRIBUTING_AGENT.md  CONTRIBUTING_AGENT.template.md  GETTING_STARTED.md  INSTALL.md  LIFECYCLE_HOOKS.md  MIGRATION.md  Makefile  POLICY_AS_CODE_IMPLEMENTATION.md  README.md  TEST_COVERAGE_REPORT.md  TROUBLESHOOTING.md  VIDEOS_CHEATSHEET.md  VIDEOS_PRODUCTION_RUNBOOK.md  VIDEOS_QUICK_START.md  VIDEOS_UPLOAD_GUIDE.md  WIKI_GUIDE.md  amplify.yml  dev.sh  mkdocs.yml  package-lock.json  package.json
rust/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  console_lambda.Dockerfile
rust/src/: agents_management.rs  beads_write.rs  cache.rs  cli.rs  cloud_tokens.rs  config.rs  config_loader.rs  console_backend.rs  console_snapshot.rs  console_telemetry.rs  console_ui_state.rs  console_wiki.rs  content_validation.rs  daemon_client.rs  daemon_paths.rs  daemon_protocol.rs  daemon_server.rs  dependencies.rs  dependency_tree.rs  doctor.rs  error.rs  event_history.rs  file_io.rs  github_security_sync.rs  gossip.rs  hierarchy.rs  hooks.rs  ids.rs  index.rs  issue_close.rs  issue_comment.rs  issue_creation.rs  issue_delete.rs  issue_display.rs  issue_files.rs  issue_line.rs  issue_listing.rs  issue_lookup.rs  issue_transfer.rs  issue_update.rs  (+23 more)
rust/tests/: core_small_module_tests.rs  cucumber.rs  dependencies.rs  id_generation.rs  kbs_main_tests.rs  models.rs  serialization_parity.rs  (+1 more)
(+1563 files in other folders)
